Fixed `scopes` because Java 8 doesn't have `Set.of`